compiler/tests/success/otbn/intrinsic_neg.jazz
export
fn neg(reg u32 arg0) {
    reg u32 x;
    x = #NEG(arg0);
    [x] = x;
}
