compiler/tests/fail/arm-m4/intrinsic_strS.jazz
export
fn str(reg u32 arg0, reg u32 arg1) {
    ?{}, [arg0] = #STRS(arg0);
}
